--- a/code/build.gradle
+++ b/code/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.lpoo_71.crackattack'
@@ -7,11 +8,16 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+application {
+    mainClassName = 'Application'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
 }
