--- a/code/build.gradle
+++ b/code/build.gradle
@@ -19,5 +19,5 @@ repositories {
 dependencies {
     compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.0.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.5'
 }
